--- a/resources/views/index.html
+++ b/resources/views/index.html
@@ -107,6 +107,7 @@
                   <ul class="block-tab mt-40">
                      <!--Menu list-->
                      <li class="active block-list">
+                         <!--foreach-->
                         <div class="col-sm-5  col-sm-offset-1 text-center">
                            <div class="block-cat">
                               <h2 class="mb-30">omelettes </h2>
@@ -117,6 +118,7 @@
                               <span class="block-price">$14</span>
                               <span class="dots"></span>
                            </div>
+                            <!--endforeach-->
                            <div class="block-content  pb-25 mb-25">
                               <h2 class="mb-5 ">Farmhouse Omelette </h2>
                               <p>Sauteed Potatoes, Bacon, Grilled Onions, and Melted Cheese Topped.</p>
